--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "@babel/types": "^7.20.2",
+    "@types/node": "^18.11.9",
+    "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.5",
