--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/types": "^7.20.2",
     "@types/node": "^18.11.9",
+    "@types/uuid": "^8.3.4",
     "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "prettier": "^2.7.1",
